_generated-doc/2.16/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc

:summaryTableId: quarkus-devservices-dev-devservices-global-dev-services-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-devservices-dev-devservices-global-dev-services-config_configuration]]link:#quarkus-devservices-dev-devservices-global-dev-services-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.enabled]]`link:#quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.enabled[quarkus.devservices.enabled]`

[.description]
--
Global flag that can be used to disable all Dev Services. If this is set to false then Dev Services will not be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.timeout]]`link:#quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.timeout[quarkus.devservices.timeout]`

[.description]
--
The timeout for starting a container

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DEVSERVICES_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DEVSERVICES_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
